修复移动端问题

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Studio - Infinite Flow</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      body { margin: 0; padding: 0; overflow: hidden; background-color: #0B0C0E; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; color: #E4E4E7; touch-action: none; /* Disable default touch actions */ }
+      body { margin: 0; padding: 0; overflow: hidden; background-color: #0B0C0E; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; color: #E4E4E7; }
       
       /* Custom scrollbar for node content - Light Mode / Default */
       .node-scroll {
