--- a/index.html
+++ b/index.html
@@ -42,6 +42,26 @@
       /* Hide scrollbar for clean inputs */
       .no-scrollbar::-webkit-scrollbar { display: none; }
       .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+
+      /* Organic Blob Animations for Liquid Effect */
+      @keyframes blob-flow-1 {
+        0%, 100% { transform: translate(0, 0) scale(1); }
+        33% { transform: translate(30px, -50px) scale(1.1); }
+        66% { transform: translate(-20px, 20px) scale(0.9); }
+      }
+      @keyframes blob-flow-2 {
+        0%, 100% { transform: translate(0, 0) scale(1); }
+        33% { transform: translate(-30px, 40px) scale(1.1); }
+        66% { transform: translate(20px, -30px) scale(0.9); }
+      }
+      @keyframes blob-flow-3 {
+        0%, 100% { transform: translate(0, 0) scale(1); }
+        50% { transform: translate(20px, 20px) scale(1.2); }
+      }
+
+      .animate-blob-1 { animation: blob-flow-1 12s infinite ease-in-out; }
+      .animate-blob-2 { animation: blob-flow-2 15s infinite ease-in-out; }
+      .animate-blob-3 { animation: blob-flow-3 10s infinite ease-in-out; }
     </style>
   <script type="importmap">
 {
