--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>AI Studio - Infinite Flow</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      body { margin: 0; padding: 0; overflow: hidden; background-color: #0B0C0E; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; color: #E4E4E7; touch-action: none; }
+      body { margin: 0; padding: 0; overflow: hidden; background-color: #0B0C0E; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; color: #E4E4E7; touch-action: pan-x pan-y; }
+      
+      /* 允许输入框正常触摸交互 */
+      input, textarea, [contenteditable="true"], [contenteditable] {
+        touch-action: auto !important;
+      }
       
       /* Custom scrollbar for node content - Light Mode / Default */
       .node-scroll {
